# ChangeLog for Gentoo Linux Installer
# Copyright 2004 Gentoo Technologies, Inc.
# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.23 2005/01/14 03:33:32 agaffney Exp $

*GLI-gtkfe-0.01 (11 Dec 2004)
  
  13 Jan 2005; John Laliberte <allanonl@bu.edu>
  Networking.py - Complete rework of the screen using (as a
  template ) agaffney's network mounts screen. This screen still
  needs to be "integrated" into the backend, but will be completed
  within the next few days. At some point the dropdown needs to be
  changed to an entry combobox.

  09 Jan 2005; John Laliberte <allanonl@bu.edu>
  Timezone.py - Updated so it now is integrated with the backend.
  When you select and item in the tree that is not a node,
  ( you need to press enter or double-click ) it will set your timezone.

  05 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
  Change all the math in Partitioning.py to work with sectors instead of
  cylinders.

  04 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
  A few tweaks to make it "work" with the GLIStorageDevice changes.

  21 Dec 2004; John Laliberte <allanonl@bu.edu>
  Daemons.py, Bootloader.py, Kernel.py, Stage.py, PortageTree.py, 
  MakeDotConf.py, RcDotConf.py now selects/loads the appropriate 
  options if a profile is loaded.  They are selected when each screen 
  is activated.
  In Timezone.py,Users.py
  Removed deprecation warning caused by gtk.OptionMenu() in Widgets.py.
  Removed some old debug values that were unnecessary.
  Integrated the Stage tarball URI, it nows loads from a profile and checks
  to make sure its a valid value by changing the background to pink.
  Created a test profile, "test_installprofile.xml" that selects different
  options illustrating the changes.
  Stage.py: Now doesn't change screens if the URI is invalid.
  Timezone.py: Changed the entire layout.  Made a recursive function to
  populate the treeview with the timezones from /usr/share/zoneinfo.
  