@@ -18,6 +18,15 @@ class Panel(GLIScreen.GLIScreen):
 		vert = gtk.VBox(gtk.FALSE, 0)
 		vert.set_border_width(10)
 
+                content_str = """Here, you will be able to define any network mounts that you want to use during
+and after the installation. For example, you can mount /usr/portage from another box
+on your network so you don't have to 'emerge sync' and store the tree locally. Currently, 
+only NFS is supported.
+"""
+
+                content_label = gtk.Label(content_str)
+                vert.pack_start(content_label, expand=gtk.FALSE, fill=gtk.FALSE, padding=0)
+
 		self.treedata = gtk.ListStore(gobject.TYPE_INT, gobject.TYPE_STRING, gobject.TYPE_STRING, gobject.TYPE_STRING, gobject.TYPE_STRING, gobject.TYPE_STRING)
 		for i in range(0, len(self.netmounts)):
 			self.treedata.append([i, self.netmounts[i]['host'], self.netmounts[i]['export'], self.netmounts[i]['type'], self.netmounts[i]['mountpoint'], self.netmounts[i]['mountopts']])
@@ -36,7 +45,7 @@ class Panel(GLIScreen.GLIScreen):
 			self.treeview.append_column(column)
 			col_num += 1
 		self.treewindow = gtk.ScrolledWindow()
-		self.treewindow.set_size_request(-1, 200)
+		self.treewindow.set_size_request(-1, 170)
 		self.treewindow.set_shadow_type(gtk.SHADOW_IN)
 		self.treewindow.set_policy(gtk.POLICY_AUTOMATIC, gtk.POLICY_AUTOMATIC)
 		self.treewindow.add(self.treeview)
