@@ -1,9 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.23 2005/01/14 03:33:32 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.24 2005/01/14 06:28:11 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
   
+  14 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Added description to the top of NetworkMounts and changed the spacing
+  of the description on Partitioning.
+
   13 Jan 2005; John Laliberte <allanonl@bu.edu>
   Networking.py - Complete rework of the screen using (as a
   template ) agaffney's network mounts screen. This screen still
